--- a/scss/style.scss
+++ b/scss/style.scss
@@ -186,97 +186,483 @@
 .result {
   display: flex;
   padding-right: Max(15px, calc((100vw - 1210px) / 2));
+  &__left {
+    max-width: 744px;
+    width: 100%;
+    margin-right: 0px;
+    flex-shrink: 0;
+    background: #06665a;
+    padding-left: 30px;
+    padding-bottom: 87px;
+    padding-top: 73px;
+  }
+  &__title {
+    font-weight: 700;
+    font-size: 51px;
+    line-height: 64px;
+    color: #fff;
+    margin-bottom: 18px;
+  }
+  &__text {
+    max-width: 473px;
+    line-height: 26px;
+    color: #fff;
+    margin-bottom: 3px;
+  }
+
+  &__wrapper {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    max-width: 474px;
+    width: 100%;
+    row-gap: 26px;
+  }
+  &__item {
+    display: flex;
+    flex-direction: column;
+    max-width: 223px;
+    width: 100%;
+    min-height: 171px;
+    background: rgba(228, 213, 192, 0.06);
+    border-radius: 5px;
+    padding: 18px 17px 26px 23px;
+    transition: background 0.5s ease-in;
+    img {
+      width: fit-content;
+    }
+    &:hover {
+      background: linear-gradient(149.06deg, rgba(255, 255, 255, 0.4) -41.74%, rgba(255, 255, 255, 0.04) 100.87%);
+    }
+  }
+  &__span {
+    margin-top: auto;
+    line-height: 26px;
+    color: #fff;
+  }
+  &__right {
+    width: calc(100% - 744px - 30px);
+    display: flex;
+  }
+  &__right-item {
+    max-width: 546px;
+    width: 100%;
+    min-height: 520px;
+    margin: auto 0;
+    transform: translateX(-47px);
+    position: relative;
+    z-index: 1;
+    &::after {
+      position: absolute;
+      content: "";
+      left: -27px;
+      top: -33px;
+      width: 522px;
+      height: 496px;
+      background: rgba(228, 213, 192, 0.15);
+      z-index: -1;
+    }
+  }
+  &__right-img {
+    width: 546px;
+    height: 333px;
+    object-fit: cover;
+  }
+  &__body {
+    padding: 43px 45px 47px;
+    background: #fff;
+  }
+  &__heading {
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 32px;
+    color: #393939;
+    padding-left: calc(54px + 22px);
+    position: relative;
+    margin-bottom: 13px;
+    &::before {
+      position: absolute;
+      content: "";
+      left: 0;
+      bottom: 13px;
+      width: 54px;
+      height: 2px;
+      background: #067164;
+    }
+  }
+  &__description {
+    line-height: 26px;
+    color: #3a3a3a;
+  }
 }
 
-.result__left {
-  max-width: 744px;
-  width: 100%;
+.knowledge {
+  padding: 120px 0;
+  &__inner {
+    background: #f9f9f9;
+    padding: 79px 0 103px;
+  }
+  &__wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  &__img {
+    transform: translateX(85px);
+  }
+  &__info {
+    max-width: 618px;
+    width: 100%;
+    position: relative;
+  }
+  &__heading {
+    max-width: 395px;
+    display: block;
+    line-height: 20px;
+    color: #2d2d2d;
+    position: relative;
+    margin-bottom: 10px;
+    margin-left: auto;
+    &::before {
+      position: absolute;
+      content: "";
+      right: -60px;
+      bottom: 5px;
+      width: 38px;
+      height: 2px;
+      background: #252525;
+    }
+  }
+  &__title {
+    max-width: 395px;
+    font-weight: 700;
+    font-size: 51px;
+    line-height: 61px;
+    color: #2d2d2d;
+    margin-bottom: 20px;
+    margin-left: auto;
+  }
+  &__text {
+    max-width: 395px;
+    line-height: 26px;
+    color: #3c3c3c;
+    margin-bottom: 40px;
+    margin-left: auto;
+  }
+  &__form {
+    background: #fff;
+    max-width: 100%;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    padding: 78px 94px 97px 88px;
+  }
+  &__subtitle {
+    line-height: 26px;
+    color: #3a3a3a;
+    margin-bottom: 20px;
+  }
+  &__label {
+    max-width: 100%;
+    position: relative;
+    .knowledge__button {
+      position: absolute;
+      top: -23px;
+      right: 0;
+    }
+  }
+  &__input {
+    width: 100%;
+    background: #3c3c3c;
+    padding: 22px;
+    border: none;
+    color: #fff;
+    &::placeholder {
+      line-height: 26px;
+      color: #fff;
+    }
+  }
+  &__button {
+    padding: 0;
+    background: #067164;
+    border: none;
+    cursor: pointer;
+    width: 131px;
+    height: 69px;
+    display: grid;
+    place-items: center;
+  }
+  &__images {
+    transform: translateY(-178px);
+  }
+}
+
+.meet {
+  overflow-x: hidden;
+  padding-bottom: 162px;
+  &__subtitle {
+    line-height: 20px;
+    color: #191e1d;
+    margin-bottom: 10px;
+  }
+  &__title {
+    font-weight: 700;
+    font-size: 51px;
+    line-height: 61px;
+    color: #191e1d;
+  }
+}
+.content {
+  display: flex;
+  padding-left: Max(15px, calc((100% - 1210px) / 2));
+  .container {
+    max-width: 1210px;
+    padding: 0 15px;
+    margin: 0 auto;
+  }
+  &__item,
+  &__card {
+    width: 474px;
+    height: 470px;
+  }
+  &__img {
+    width: 474px;
+    height: 470px;
+    object-fit: cover;
+  }
+  .slick-dots {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    bottom: -55px;
+    left: 50%;
+    transform: translateX(-50%);
+    gap: 0 6px;
+  }
+  .slick-dots li button {
+    font-size: 0;
+    padding: 0;
+    margin: 0;
+    width: 0;
+    height: 0;
+    border: none;
+    // width: 8px;
+    // height: 8px;
+    // border-radius: 50%;
+    // background: #ded9f8;
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+    width: 14px;
+    height: 7px;
+    background: #067164;
+    opacity: 1;
+    border-radius: 8px;
+  }
+  .slick-dots li.slick-active button {
+    // width: 14px;
+    // height: 14px;
+    // background: #5e50a2;
+    // border-radius: 50%;
+    width: 50px;
+    height: 7px;
+    background: #067164;
+    border-radius: 8px;
+  }
+}
+
+.left {
+  width: 0px;
   margin-right: 0px;
   flex-shrink: 0;
-  min-height: 398px;
-  background: #06665a;
-  padding-left: 15px;
-  padding-bottom: 87px;
-  padding-top: 73px;
-}
-.result__title {
-  font-weight: 700;
-  font-size: 51px;
-  line-height: 64px;
-  color: #fff;
-  margin-bottom: 18px;
-}
-.result__text {
-  max-width: 473px;
-  line-height: 26px;
-  color: #fff;
-  margin-bottom: 3px;
-}
-
-.result__wrapper {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  max-width: 474px;
-  width: 100%;
-  row-gap: 26px;
-}
-.result__item {
-  display: flex;
-  flex-direction: column;
-  max-width: 223px;
-  width: 100%;
-  min-height: 171px;
-  background: rgba(228, 213, 192, 0.06);
-  border-radius: 5px;
-  padding: 18px 17px 26px 23px;
-  transition: all 0.5s ease-in;
-  img {
-    width: fit-content;
-  }
-  &:hover {
-    background: linear-gradient(149.06deg, rgba(255, 255, 255, 0.4) -41.74%, rgba(255, 255, 255, 0.04) 100.87%);
-  }
-}
-
-.result__span {
-  margin-top: auto;
-  line-height: 26px;
-  color: #fff;
-}
-
-.result__right {
-  width: calc(100% - 744px - 30px);
-  min-height: 398px;
+  // min-height: 398px;
   background-color: #c4c4c4;
-  display: flex;
 }
-.result__right-item {
-  max-width: 546px;
-  width: 100%;
-  min-height: 520px;
-  margin: auto 0;
-  transform: translateX(-47px);
-  position: relative;
-  z-index: 1;
-  &::after {
+
+.right {
+  width: calc(100% - 0px - 30px);
+  // min-height: 398px;
+  background-color: #c4c4c4;
+  background: darkorange;
+  .slick-list {
+    overflow: inherit;
+  }
+  .slick-arrow {
     position: absolute;
-    content: '';
-    left: -27px;
-    top: -33px;
-    width: 522px;
-    height: 496px;
-    background: rgba(228, 213, 192, 0.15);
-    z-index: -1;
+    top: -47px;
+    right: 0;
+    z-index: 1;
+    padding: 0;
+    border: none;
+    cursor: pointer;
+    background: transparent;
+    width: 58px;
+    height: 53px;
+    display: grid;
+    place-items: center;
+    background: #067164;
+    border-radius: 1px;
+  }
+  .slick-prev.slick-arrow {
+    right: 89px;
   }
 }
-.result__right-img {
-  width: 546px;
-  height: 333px;
-  object-fit: cover;
+
+.experience {
+  padding: 99px 0;
+  background: #067164;
+  &__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #fff;
+  }
+  &__info {
+    max-width: 487px;
+    width: 100%;
+  }
+  &__text {
+    line-height: 26px;
+    margin-bottom: 23px;
+  }
+  &__link {
+    display: inline-block;
+    background: #fff;
+    font-family: "DM Sans", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 22px;
+    color: #067164;
+    padding: 29px 41px;
+  }
+  &__content {
+    max-width: 550px;
+    width: 100%;
+  }
+  &__subtitle {
+    line-height: 20px;
+    margin-bottom: 23px;
+  }
+  &__title {
+    font-weight: 700;
+    font-size: 51px;
+    line-height: 61px;
+  }
 }
-.result__body {
-  padding: 43px 45px 47px;
-  background: #fff
+.footer {
+  background: #172021;
+}
+.footer-top {
+  padding: 45px 0 53px;
+  border-bottom: 0.5px solid #d9dbe9;
+  color: #fff;
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__info {
+    max-width: 310px;
+    width: 100%;
+  }
+  &__wrapper {
+    max-width: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 87px;
+  }
+  &__logo {
+    display: inline-block;
+    margin-bottom: 35px;
+  }
+  &__slogan {
+    font-family: "DM Sans", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 22px;
+    margin-bottom: 15px;
+  }
+  &__text {
+    font-family: "DM Sans", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+    margin-bottom: 30px;
+  }
+  &__title {
+    font-family: "DM Sans", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 22px;
+    margin-bottom: 30px;
+    color: #ffffff;
+  }
+  &__list {
+    li:not(:first-child) {
+      margin-top: 18px;
+    }
+    a {
+      line-height: 26px;
+      color: #fff;
+    }
+  }
+  &__item:last-child {
+    max-width: 270px;
+    width: 100%;
+  }
+  &__card {
+    display: flex;
+    gap: 0 24px;
+    & + .footer-top__card {
+      margin-top: 10px;
+    }
+    p {
+      line-height: 26px;
+    }
+    a {
+      line-height: 26px;
+      color: #fff;
+    }
+  }
+}
+.footer-bottom {
+  padding: 25px 0 44px;
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+  }
+  &__copyright {
+    font-family: "DM Sans", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+  }
+  &__info {
+    display: flex;
+    align-items: center;
+    gap: 0 14px;
+  }
+  p {
+    font-family: "DM Sans", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+    color: #a4a4a4;
+  }
+  a {
+    font-family: "DM Sans", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+    text-decoration-line: underline;
+    color: #fff;
+  }
 }
 @import "media";
