--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,21 @@ a {
           align-items: center;
 }
 
+.header-nav__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-left: 184px;
+  max-width: 100%;
+  width: 100%;
+}
+
 .header-nav__btn {
   display: none;
 }
@@ -953,5 +968,101 @@ a {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
   color: #fff;
+}
+
+@media (max-width: 992px) {
+  .header-nav__btn {
+    display: block;
+    width: 40px;
+    height: 30px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    position: relative;
+    -webkit-transition: all 0.4s ease-in;
+    transition: all 0.4s ease-in;
+  }
+  .header-nav__btn span {
+    position: absolute;
+    top: 4px;
+    width: 40px;
+    height: 6px;
+    border-radius: 5px;
+    left: 0;
+    right: 0;
+    background: #000;
+    -webkit-transition: all 0.4s ease-in;
+    transition: all 0.4s ease-in;
+  }
+  .header-nav__btn span:nth-child(2),
+  .header-nav__btn span:nth-child(3) {
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
+  .header-nav__btn span:nth-child(4) {
+    bottom: 4px;
+    margin-top: auto;
+  }
+  .header-nav__btn--active span:nth-child(2) {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    background: #fff;
+  }
+  .header-nav__btn--active span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    background: #fff;
+  }
+  .header-nav__btn--active span:nth-child(1),
+  .header-nav__btn--active span:nth-child(4) {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  .header-nav__wrap {
+    position: fixed;
+    inset: 0;
+    background: dodgerblue;
+    background-color: rgba(0, 0, 0, 0.9);
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-left: 0;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: 20px 0;
+    width: 0%;
+    overflow-x: hidden;
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+  }
+  .header-nav__wrap--show {
+    width: 100%;
+  }
+  .header-nav__menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .header-nav__link {
+    color: #fff;
+    font-size: 40px;
+    line-height: 60px;
+  }
+  .header-nav__log-in {
+    font-size: 25px;
+    line-height: 30px;
+    color: #fff;
+  }
+  .header-nav__sign {
+    padding: 12px 30px;
+    font-size: 25px;
+    line-height: 30px;
+    background: #000;
+    color: #fff;
+  }
 }
 /*# sourceMappingURL=style.css.map */
