--- a/css/style.css
+++ b/css/style.css
@@ -970,7 +970,27 @@ a {
   color: #fff;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 1135px) {
+  .header-body__img {
+    height: 600px;
+  }
+}
+
+@media (max-width: 1105px) {
+  .header-body__info {
+    max-width: 600px;
+  }
+  .header-body__img {
+    height: 560px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .header-body__title {
+    max-width: 665px;
+    width: 100%;
+    font-size: 55px;
+  }
   .header-nav__btn {
     display: block;
     width: 40px;
@@ -1035,17 +1055,17 @@ a {
     gap: 20px 0;
     width: 0%;
     overflow-x: hidden;
-    -webkit-transition: all 0.4s ease-in-out;
-    transition: all 0.4s ease-in-out;
-  }
-  .header-nav__wrap--show {
-    width: 100%;
+    -webkit-transition: all 0.6s ease-in-out;
+    transition: all 0.6s ease-in-out;
   }
   .header-nav__menu {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  .header-nav__wrap--show {
+    width: 100%;
   }
   .header-nav__link {
     color: #fff;
@@ -1063,6 +1083,81 @@ a {
     line-height: 30px;
     background: #000;
     color: #fff;
+  }
+}
+
+@media (max-width: 820px) {
+  .header-body__title {
+    font-size: 40px;
+    line-height: 60px;
+  }
+  .header-body__contact {
+    gap: 0 25px;
+  }
+}
+
+@media (max-width: 768px) {
+  .header-body__title {
+    font-size: 35px;
+  }
+  .header-body__contact {
+    gap: 0 15px;
+  }
+  .header-body__info {
+    max-width: 100%;
+    width: 100%;
+  }
+  .header-body__subscribe {
+    padding: 18px 15px;
+  }
+}
+
+@media (max-width: 425px) {
+  .header-body__info {
+    padding: 25px 0;
+  }
+  .header-body__img {
+    display: none;
+  }
+  .header-body__title {
+    margin-bottom: 15px;
+    line-height: 55px;
+  }
+  .header-body__subscribe {
+    padding: 12px 15px;
+  }
+}
+
+@media (max-width: 360px) {
+  .header-nav {
+    padding: 15px 0;
+  }
+  .header-body__title {
+    font-size: 32px;
+  }
+  .header-body__subscribe {
+    padding: 12px 12px;
+  }
+  .header-body__contact {
+    gap: 0 10px;
+  }
+}
+
+@media (max-width: 320px) {
+  .header-body {
+    text-align: center;
+  }
+  .header-body__title {
+    font-size: 30px;
+    line-height: 45px;
+  }
+  .header-body__contact {
+    gap: 15px 0;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
 }
 /*# sourceMappingURL=style.css.map */
