--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,20 +1,156 @@
+@media (max-width: 1400px) {
+  .result {
+    &__right-item::after {
+      left: -40px;
+      top: -40px;
+      width: 495px;
+      height: 490px;
+    }
+  }
+  .knowledge {
+    padding: 85px 0;
+    &__img {
+      transform: translateX(50px);
+      width: 520px;
+    }
+    &__info {
+      max-width: 650px;
+    }
+    &__inner {
+      padding: 70px 0 0;
+    }
+    &__heading,
+    &__title,
+    &__text {
+      max-width: 435px;
+    }
+  }
+  .content {
+    &__item,
+    &__card {
+      width: 400px;
+      height: 450px;
+    }
+    &__img {
+      width: 400px;
+      height: 470px;
+      object-fit: cover;
+    }
+  }
+  .right {
+    .slick-arrow {
+      top: -55px;
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .about {
+    &__info {
+      max-width: 620px;
+    }
+  }
+  .result {
+    &__left {
+      max-width: 675px;
+    }
+    &__right {
+      width: calc(100% - 0px - 30px);
+    }
+    &__right-item::after {
+      width: 415px;
+      height: 525px;
+    }
+  }
+  .knowledge {
+    &__img {
+      width: 500px;
+      height: 435px;
+      object-fit: cover;
+      transform: translateX(0);
+    }
+    &__info {
+      max-width: 600px;
+    }
+    &__form {
+      padding: 55px 35px 65px 40px;
+    }
+  }
+  .meet {
+    padding-bottom: 100px;
+  }
+  .content {
+    &__item,
+    &__card {
+      width: 360px;
+      height: 435px;
+    }
+    &__img {
+      width: 360px;
+      height: 435px;
+    }
+  }
+}
+
 @media (max-width: 1135px) {
   .header-body {
     &__img {
       height: 600px;
     }
   }
+  .about {
+    padding: 60px 0;
+    &__info {
+      max-width: 590px;
+    }
+  }
+  .knowledge {
+    &__img {
+      width: 450px;
+      height: 435px;
+      object-fit: cover;
+      transform: translateX(0);
+    }
+  }
 }
+
 @media (max-width: 1105px) {
-  // .header {
-  //   background: rgba(0, 0, 0, 0.5);
-  // }
   .header-body {
     &__info {
       max-width: 600px;
     }
     &__img {
       height: 560px;
+    }
+  }
+  .about {
+    &__info {
+      max-width: 545px;
+    }
+  }
+  .result {
+    &__left {
+      max-width: 630px;
+    }
+    &__right-item::after {
+      width: 425px;
+      height: 525px;
+    }
+  }
+  .knowledge {
+    &__info {
+      max-width: 555px;
+    }
+  }
+  .content {
+    &__item,
+    &__card {
+      width: 335px;
+      height: 415px;
+    }
+    &__img {
+      width: 335px;
+      height: 415px;
     }
   }
 }
@@ -76,7 +212,7 @@
       position: fixed;
       inset: 0;
       background: dodgerblue;
-      background-color: rgba(0, 0, 0, 0.9);
+      background-color: rgba(#000, 0.9);
       flex-direction: column;
       margin-left: 0;
       justify-content: center;
@@ -87,10 +223,20 @@
     }
     &__menu {
       flex-direction: column;
+      // opacity: 0;
     }
     &__wrap--show {
       width: 100%;
+      // .header-nav__menu {
+      //   opacity: 1;
+      // }
+      // .header-nav__wrapper {
+      //   opacity: 1;
+      // }
     }
+    // &__wrapper {
+    //   opacity: 0;
+    // }
     &__link {
       color: #fff;
       font-size: 40px;
@@ -109,6 +255,70 @@
       color: #fff;
     }
   }
+  .partners {
+    padding: 50px 0;
+    &__inner {
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px 35px;
+    }
+  }
+  .about {
+    &__info {
+      max-width: 515px;
+    }
+  }
+  .result {
+    &__left {
+      max-width: 600px;
+    }
+    &__right-item::after {
+      width: 395px;
+    }
+    &__item {
+      max-width: 200px;
+      min-height: 150px;
+      padding: 15px 10px 20px 10px;
+    }
+  }
+  .knowledge {
+    &__info {
+      max-width: 510px;
+    }
+  }
+  .experience {
+    padding: 75px 0;
+    &__content {
+      max-width: 490px;
+    }
+    &__inner {
+      flex-wrap: wrap;
+      gap: 20px 0;
+    }
+    &__link {
+      padding: 20px 33px;
+    }
+  }
+  .footer-top {
+    padding: 45px 0;
+    &__wrapper {
+      margin-left: 55px;
+      flex-wrap: wrap;
+      gap: 15px 0;
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .experience {
+    text-align: center;
+    &__info {
+      max-width: 100%;
+    }
+    &__content {
+      max-width: 100%;
+    }
+  }
 }
 
 @media (max-width: 820px) {
@@ -120,6 +330,123 @@
     &__contact {
       gap: 0 25px;
     }
+  }
+  .about {
+    &__img {
+      width: 330px;
+      height: 350px;
+    }
+    &__info {
+      max-width: 425px;
+    }
+    &__subtitle {
+      margin-bottom: 15px;
+    }
+    &__title {
+      font-size: 44px;
+      line-height: 58px;
+      margin-bottom: 20px;
+    }
+    &__text + .about__text {
+      margin-top: 15px;
+    }
+    &__images {
+      img {
+        width: 245px;
+        height: 240px;
+        object-fit: cover;
+      }
+    }
+  }
+  .result {
+    &__left {
+      max-width: 435px;
+    }
+    &__wrapper {
+      max-width: 365px;
+      row-gap: 20px;
+    }
+    &__item {
+      max-width: 175px;
+    }
+    &__title {
+      font-size: 45px;
+      line-height: 60px;
+    }
+    &__right-item {
+      transform: translateX(0);
+    }
+    &__right-item::after {
+      width: 390px;
+      height: 505px;
+      left: -30px;
+      top: -30px;
+    }
+  }
+  .knowledge {
+    padding: 50px 0;
+    &__inner {
+      padding: 0;
+    }
+    &__img {
+      width: 370px;
+      height: 350px;
+    }
+    &__info {
+      max-width: 390px;
+    }
+    &__heading,
+    &__title,
+    &__text {
+      max-width: 100%;
+      margin-left: 0;
+    }
+    &__title {
+      font-size: 45px;
+      line-height: 60px;
+      margin-bottom: 10px;
+    }
+    &__form {
+      padding: 25px 20px 40px 15px;
+    }
+    &__text {
+      margin-bottom: 20px;
+    }
+    &__images {
+      transform: translateY(-100px);
+    }
+  }
+  .meet {
+    &__title {
+      font-size: 40px;
+      line-height: 55px;
+    }
+  }
+  .right {
+    width: calc(100% - 0px - 15px);
+    .slick-prev.slick-arrow {
+      right: 75px;
+    }
+  }
+  .content {
+    &__item,
+    &__card {
+      width: 385px;
+    }
+    &__img {
+      width: 385px;
+    }
+  }
+  .footer-top {
+    &__info {
+      max-width: 270px;
+    }
+    &__wrapper {
+      gap: 25px 0;
+    }
+  }
+  .footer-bottom {
+    padding: 25px 0;
   }
 }
 
@@ -137,6 +464,83 @@
     }
     &__subscribe {
       padding: 18px 15px;
+    }
+  }
+  .about {
+    &__img {
+      width: 300px;
+      height: 310px;
+    }
+    &__info {
+      max-width: 405px;
+    }
+    &__title {
+      font-size: 40px;
+      line-height: 50px;
+      margin-bottom: 10px;
+    }
+    &__link {
+      margin-top: 15px;
+      padding: 20px 25px;
+      border-radius: 5px;
+    }
+    &__images {
+      img {
+        width: 225px;
+        height: 225px;
+        object-fit: cover;
+      }
+    }
+  }
+  .result {
+    &__body {
+      padding: 20px 25px 20px;
+      background: silver;
+    }
+    &__description {
+      text-align: center;
+    }
+    &__right-img {
+      height: 280px;
+    }
+    &__right-item::after {
+      width: 325px;
+      height: 475px;
+    }
+    &__left {
+      padding-bottom: 55px;
+      padding-top: 50px;
+    }
+    &__right-item {
+      min-height: 470px;
+    }
+  }
+  .knowledge {
+    &__info {
+      max-width: 360px;
+    }
+    &__button {
+      width: 65px;
+    }
+    &__img {
+      width: 350px;
+      height: 350px;
+    }
+  }
+  .content {
+    &__item,
+    &__card {
+      width: 360px;
+    }
+    &__img {
+      width: 360px;
+    }
+  }
+  .experience {
+    padding: 50px 0;
+    &__title {
+      font-size: 42px;
+      line-height: 60px;
     }
   }
 }
@@ -157,6 +561,263 @@
       padding: 12px 15px;
     }
   }
+  .partners {
+    padding: 35px 0;
+    &__inner {
+      gap: 20px 35px;
+    }
+  }
+  .about {
+    padding: 45px 0;
+    padding-bottom: 0;
+    &__inner {
+      gap: 40px 0;
+    }
+    &__img {
+      width: 100%;
+      height: 250px;
+      max-width: 100%;
+      object-position: center;
+    }
+    &__images {
+      transform: translateY(-55px);
+      img {
+        width: 200px;
+        height: 200px;
+      }
+    }
+  }
+  .result {
+    flex-direction: column;
+    padding-right: Max(0px, calc((100vw - 1210px) / 2));
+    &__left {
+      padding-bottom: 30px;
+      padding-top: 30px;
+      padding-left: 15px;
+    }
+    &__title {
+      font-size: 42px;
+      line-height: 50px;
+    }
+    &__right-item::after {
+      width: 350px;
+      height: 435px;
+      left: 60px;
+      top: -25px;
+    }
+  }
+  .knowledge {
+    &__wrapper {
+      gap: 20px 0;
+    }
+    &__img {
+      width: 100%;
+      height: 300px;
+    }
+    &__info {
+      max-width: 100%;
+    }
+    &__images {
+      transform: translateY(-45px);
+      width: 250px;
+      height: 235px;
+      object-fit: cover;
+    }
+  }
+  .right {
+    .slick-arrow {
+      top: -47px;
+      width: 40px;
+      height: 40px;
+    }
+    .slick-prev.slick-arrow {
+      right: 50px;
+    }
+  }
+  .meet {
+    padding-bottom: 75px;
+    &__title {
+      font-size: 32px;
+      line-height: 40px;
+    }
+  }
+  .content {
+    .slick-dots {
+      bottom: -35px;
+    }
+  }
+  .experience {
+    &__title {
+      font-size: 37px;
+      line-height: 50px;
+    }
+  }
+  .footer-top {
+    &__inner {
+      flex-wrap: wrap;
+    }
+    &__wrapper {
+      margin-left: 0px;
+      gap: 15px 0;
+    }
+    &__item {
+      max-width: 190px;
+      width: 100%;
+    }
+    &__item:last-child {
+      max-width: 190px;
+      width: 100%;
+    }
+    &__card {
+      gap: 0 5px;
+    }
+    &__row:last-child {
+      p {
+        a {
+          font-size: 14px;
+        }
+      }
+    }
+  }
+  .footer-bottom {
+    &__inner {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    &__info {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+  }
+}
+
+@media (max-width: 414px) {
+  .about {
+    &__title {
+      font-size: 38px;
+    }
+    &__subtitle {
+      margin-bottom: 0;
+    }
+  }
+  .result {
+    &__wrapper {
+      row-gap: 15px;
+      max-width: 365px;
+    }
+    &__left {
+      padding-left: 15px;
+    }
+    &__right-item::after {
+      left: 55px;
+    }
+  }
+}
+
+@media (max-width: 390px) {
+  .about {
+    &__title {
+      font-size: 36px;
+    }
+  }
+  .result {
+    &__right-item::after {
+      left: 30px;
+    }
+    &__text {
+      max-width: 100%;
+      font-size: 15px;
+    }
+    &__title {
+      font-size: 38px;
+      line-height: 40px;
+    }
+  }
+  .knowledge {
+    &__img {
+      width: 100%;
+      height: 270px;
+      object-fit: cover;
+    }
+    &__title {
+      font-size: 40px;
+      line-height: 50px;
+    }
+  }
+  .content {
+    &__item,
+    &__card {
+      width: 350px;
+    }
+    &__img {
+      width: 350px;
+    }
+  }
+  .footer-top {
+    &__item {
+      max-width: 170px;
+    }
+    &__item:last-child {
+      max-width: 170px;
+    }
+    &__card {
+      gap: 0 5px;
+    }
+    &__logo {
+      margin-bottom: 15px;
+    }
+  }
+  .footer-bottom {
+    a,
+    p {
+      font-size: 16px;
+    }
+  }
+}
+
+@media (max-width: 375px) {
+  .header-body {
+    &__contact {
+      gap: 15px 0;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+  }
+  .about {
+    &__title {
+      font-size: 35px;
+    }
+  }
+  .result {
+    &__right-item::after {
+      left: 15px;
+    }
+    &__wrapper {
+      max-width: 350px;
+    }
+    &__item {
+      max-width: 165px;
+      padding: 15px 10px 15px 10px;
+    }
+    &__span {
+      line-height: 20px;
+      font-size: 15px;
+    }
+  }
+  .content {
+    &__item,
+    &__card {
+      width: 325px;
+    }
+    &__img {
+      width: 325px;
+    }
+  }
+  .experience {
+    &__link {
+      padding: 15px 22px;
+    }
+  }
 }
 
 @media (max-width: 360px) {
@@ -174,6 +835,64 @@
       gap: 0 10px;
     }
   }
+  .about {
+    padding-top: 35px;
+    &__title {
+      font-size: 33px;
+    }
+    &__img {
+      height: 220px;
+    }
+  }
+  .result {
+    &__right-item::after {
+      width: 335px;
+      left: 15px;
+    }
+    &__wrapper {
+      max-width: 335px;
+    }
+    &__title {
+      font-size: 30px;
+      line-height: 35px;
+    }
+    &__heading::before {
+      left: 10px;
+      width: 50px;
+    }
+    &__text {
+      font-size: 14px;
+      margin-bottom: 15px;
+    }
+  }
+  .knowledge {
+    &__img {
+      height: 220px;
+    }
+    &__title {
+      text-align: center;
+      font-size: 35px;
+      line-height: 45px;
+    }
+    &__text {
+      text-align: center;
+    }
+    &__input {
+      padding: 15px;
+    }
+    &__label .knowledge__button {
+      top: -16px;
+      height: 55px;
+    }
+  }
+  .footer-top {
+    &__item {
+      max-width: 160px;
+    }
+    &__item:last-child {
+      max-width: 160px;
+    }
+  }
 }
 
 @media (max-width: 320px) {
@@ -183,10 +902,57 @@
       font-size: 30px;
       line-height: 45px;
     }
-    &__contact {
-      gap: 15px 0;
-      justify-content: center;
-      flex-wrap: wrap;
+  }
+  .about {
+    &__title {
+      font-size: 30px;
+    }
+  }
+  .result {
+    &__right-item::after {
+      width: 300px;
+      left: 8px;
+    }
+    &__wrapper {
+      max-width: 290px;
+    }
+    &__item {
+      max-width: 140px;
+    }
+    &__heading::before {
+      left: 30px;
+      width: 35px;
+    }
+  }
+  .content {
+    &__item,
+    &__card {
+      width: 275px;
+      height: 350px;
+    }
+    &__img {
+      width: 275px;
+      height: 350px;
+    }
+  }
+  .meet {
+    &__title {
+      font-size: 26px;
+      line-height: 35px;
+    }
+  }
+  .experience {
+    &__title {
+      font-size: 30px;
+      line-height: 40px;
+    }
+  }
+  .footer-top {
+    &__item {
+      max-width: 140px;
+    }
+    &__item:last-child {
+      max-width: 140px;
     }
   }
 }
